# agent-firewall

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent-firewall/: config.json  flow.json
.agent-firewall/skills/browser-control/: SKILL.md
.agent-firewall/skills/skill-creator/: SKILL.md
desktop/: main.js  package-lock.json  package.json  preload.js  workspace.js  workspace.test.js
desktop/renderer/: index.html  renderer.js  styles.css
docs/: OKRs-agent-firewall-2026Q3.md  PRD-agent-firewall.md  architecture-agent-orchestration.md  implementation-plan.md  product-audit.md  ui-design-agent-orchestration.md  user-stories-agent-orchestration.md
scripts/: agent_firewall_entry.py  build_app.ps1  build_app.sh  start_desktop.ps1  start_desktop.sh
src/agent_firewall/: __init__.py  acp.py  app.py  browser.py  capabilities.py  config.py  diagnostics.py  engine.py  fake_model.py  flow.py  handoff.py  imports.py  policy.py  revisions.py  runner.py  skills.py  store.py  tools.py  workbench.py
tests/: test_acp_policy.py  test_capabilities.py  test_config.py  test_diagnostics.py  test_engine.py  test_evidence_loop.py  test_execution_guard.py  test_flow_runner.py  test_frozen_script_runner.py  test_imports.py  test_mcp_discovery.py  test_model_runtime.py  test_policy.py  test_policy_config.py  test_policy_runner.py  test_preflight.py  test_revision_cli.py  test_revisions.py  test_skill_binding_revision.py  test_skills.py  test_store_workbench.py  test_tools.py  test_workbench.py  test_workbench_approval.py  test_workbench_cli.py  test_workbench_comparison.py
(+5 files in other folders)
