[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-firewall"
version = "0.1.0"
description = "Cross-platform deepagents app shell for guarded, skill-aware agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-firewall maintainers" }]
dependencies = [
  "deepagents>=0.1.0",
  "deepagents-acp>=0.0.9",
  "langchain-openai>=1.0.0",
  "langchain-mcp-adapters>=0.1.0",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
browser = ["playwright>=1.48"]
dev = ["pytest>=8.2", "pytest-cov>=5.0"]
app = ["pyinstaller>=6.10"]

[project.scripts]
agent-firewall = "agent_firewall.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_firewall"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_firewall/resources" = "agent_firewall/resources"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
